<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        app:title="@string/CapNhatGhiChu"
        app:titleTextColor="@color/colorWhite" />

    <EditText
        android:id="@+id/edtTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:hint="@string/NhapTieuDe"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorView" />

    <EditText
        android:id="@+id/edtContentDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/NhapNoiDung"
        android:padding="10dp" />

</LinearLayout>