<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:ignore="DuplicateIds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorToolbar"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTextTitle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:padding="10dp"
                android:text="@string/ThongBao"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_warning_white_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTextMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="25dp"
            android:text="@string/XoaAlertDialog"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorOranges"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_dialog_yes"
                android:text="@string/DongY"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:background="@drawable/button_dialog_no"
                android:text="@string/Thoat"
                android:textAllCaps="false"
                android:textColor="@color/colorOranges"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>